# statemachine-engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .venv  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
data/: pipeline.db
docs/: DATABASE-CLI-CLEANUP.md  DATABASE-CLI-REMAINING-ISSUES.md  DELIVERY-SETUP.md  DEPLOY-v1.0.21.md  bash-action-timeout-fix.md  change-request-check-database-queue.md  change-request-extract-job-data.md  concurrent-fsm-kanban.md  concurrent-spawning-implementation.md  context-passing-implementation-plan.md  diagram-test-harness.md  engine-change-implementation-analysis.md  engine-change-request.md  event-monitor-plan.md  feature-request-actions-dir.md  feature-request-event-socket-lazy-reconnect.md  hang-detection-implementation.md  hang-detection-plan.md  issue-css.md  last-state.md  multiple-engines.md  parallel-state-machines.md  philosopher-fsm-ui.md  plan-barebones-separation-of-concerns.md  plan-barebones-ui-css-updates.md  plan-concurrent-job-spawning.md  plan-ui-animation-css-only-updates.md  plan-ui-fsm-refresh.md  plan-wait-for-jobs-action.md  plan-websocket-comms.md  plan_kanban_tabs.md  quickstart.md  realtime-cli-events.md  refactoring-analysis-2025-11.md  refactoring-implementation-summary.md  refactoring-interpolation-logic.md  replan-ui-animation-css-only-updates.md  sdxl-svg-analysis.md  sdxlgenerationphase-svg-original.md  sdxlgenerationphase-svg.md  (+12 more)
feature-requests/: FR-FSM-001-graph-linter.md  FR-FSM-002-known-context.md  FR-FSM-003-fix-example-configs.md  FR-FSM-004-validate-wrapper.md  FR-FSM-005-split-database-cli.md  FR-FSM-006-split-diagrams.md  FR-FSM-007-split-engine.md  FR-FSM-008-split-websocket-server.md  FR-FSM-009-action-idempotency.md  FR-FSM-009-face-changer-cleanup.md  FR-FSM-010-non-transition-action-reexecution-followup.md  FR-FSM-010-remove-node-modules.md  FR-FSM-011-completed-indices-cross-state-leak.md  FR-FSM-011-project-manifest-system-cli.md  FR-FSM-012-action-loader-per-execution-instantiation.md  FR-FSM-012-first-class-state-groups.md  FR-FSM-013-diagram-api-config-type-resolution.md  FR-FSM-014-pipeline-logging-monitoring.md  FR-FSM-015-watcher2-pipeline-logging.md  FR-FSM-016-event-driven-job-completion.md  FR-FSM-017-remove-sys-path-hacks.md  TEMPLATE.md
logs/: elem3ents.html
monitor-test/: IMPLEMENTATION.md  README.md  cleanup.sh  quick-test.sh  run-monitor.sh  send-event.sh  start-websocket.sh  start-worker.sh  test-full.sh
scripts/: clean_database_cli.py  cleanup_cli_final.py  start-external-project.sh  start-monitoring.sh  start-system.sh  start-worker.sh  validate-state-machines.py
statemachine_engine-0.0.9/: CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  requirements.txt
templates/: README.md  start-system.sh
tests/: conftest.py  test_action_loader.py  (+4 more)
(+197 files in other folders)
