[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statemachine-engine"
version = "1.0.0"
description = "Event-driven state machine framework with real-time monitoring"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
statemachine = "statemachine_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
