[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statemachine-engine"
version = "1.0.7"
description = "A generic, composable state machine engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sami Heikkinen", email = "sheikki@yahoo.com"}
]
keywords = [
    "state-machine",
    "workflow",
    "event-driven",
    "fsm",
    "automation",
    "orchestration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/sheikkinen/statemachine-engine"
Documentation = "https://github.com/sheikkinen/statemachine-engine#readme"
Repository = "https://github.com/sheikkinen/statemachine-engine"
Issues = "https://github.com/sheikkinen/statemachine-engine/issues"
Changelog = "https://github.com/sheikkinen/statemachine-engine/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
]

[project.scripts]
statemachine = "statemachine_engine.cli:main"
statemachine-db = "statemachine_engine.database.cli:main"
statemachine-fsm = "statemachine_engine.tools.diagrams:main"
statemachine-diagrams = "statemachine_engine.tools.cli:main"
statemachine-ui = "statemachine_engine.ui.cli:main"
statemachine-validate = "statemachine_engine.tools.validate:main"
statemachine-events = "statemachine_engine.tools.event_monitor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/*"]

[tool.setuptools.data-files]
"." = ["templates/start-system.sh", "templates/README.md"]
